--- a/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
+++ b/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
@@ -45,6 +45,9 @@
   <ItemGroup>
     <Compile Include="AppConfigClass.cs" />
     <Compile Include="DataBase.cs" />
+    <Compile Include="Data\Linq2SQL\MailSenderDB.cs">
+      <DependentUpon>MailSenderDB.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Data\Linq2SQL\MailSenderDB.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -52,6 +55,7 @@
     </Compile>
     <Compile Include="MailSenderService.cs" />
     <Compile Include="MailSheduler.cs" />
+    <Compile Include="PasswordDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
