--- a/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
+++ b/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConfigClass.cs" />
@@ -62,8 +63,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="SenderConfig.cs" />
     <Compile Include="SentState.cs" />
+    <Compile Include="Task.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
