--- a/WPFSendMail/MailSender/MailSender.csproj
+++ b/WPFSendMail/MailSender/MailSender.csproj
@@ -93,6 +93,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModel\SenderEditorModel.cs" />
+    <Compile Include="View\SenderEditorWindow.xaml.cs">
+      <DependentUpon>SenderEditorWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ToolBar.xaml.cs">
       <DependentUpon>ToolBar.xaml</DependentUpon>
     </Compile>
@@ -133,6 +137,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="View\SenderEditorWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ToolBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
