--- a/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
+++ b/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="AppConfigClass.cs" />
     <Compile Include="DataBase.cs" />
+    <Compile Include="DataProviders\Linq2SQL\Linq2SQLBaseProvider.cs" />
     <Compile Include="Data\Linq2SQL\MailSenderDB.cs">
       <DependentUpon>MailSenderDB.dbml</DependentUpon>
     </Compile>
@@ -57,8 +58,11 @@
     <Compile Include="Entity\Base\BaseEntity.cs" />
     <Compile Include="Entity\Base\HumanEntity.cs" />
     <Compile Include="Entity\Base\NamedEntity.cs" />
+    <Compile Include="Entity\Email.cs" />
     <Compile Include="Entity\Recipient.cs" />
+    <Compile Include="Entity\RecipientsList.cs" />
     <Compile Include="Entity\Sender.cs" />
+    <Compile Include="Entity\SheduledTask.cs" />
     <Compile Include="Entity\SMTPServer.cs" />
     <Compile Include="MailSenderService.cs" />
     <Compile Include="MailSheduler.cs" />
@@ -70,9 +74,15 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="SentState.cs" />
-    <Compile Include="Services\Interfaces\IDataProvider.cs" />
-    <Compile Include="Services\Linq2SQL\Linq2SSQLReipientDataProvider.cs" />
-    <Compile Include="Services\Linq2SQL\Linq2SSQLSenderDataProvider.cs" />
+    <Compile Include="DataProviders\Interfaces\IDataProvider.cs" />
+    <Compile Include="DataProviders\Interfaces\IEmailDataProvider.cs" />
+    <Compile Include="DataProviders\Interfaces\IRecipientDataProvider.cs" />
+    <Compile Include="DataProviders\Interfaces\IRecipientsListDataProvider.cs" />
+    <Compile Include="DataProviders\Interfaces\ISenderDataProvider.cs" />
+    <Compile Include="DataProviders\Interfaces\ISheduledTaskDataProvider.cs" />
+    <Compile Include="DataProviders\Interfaces\ISMTPServerDataProvider.cs" />
+    <Compile Include="DataProviders\Linq2SQL\Linq2SQLRecipientDataProvider.cs" />
+    <Compile Include="DataProviders\Linq2SQL\Linq2SQLSenderDataProvider.cs" />
     <Compile Include="Task.cs" />
   </ItemGroup>
   <ItemGroup>
