--- a/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
+++ b/WPFSendMail/MailSender.Lib/MailSender.Lib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AppConfigClass.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="DataProviders\Linq2SQL\Linq2SQLBaseProvider.cs" />
+    <Compile Include="DataProviders\Linq2SQL\Linq2SQLSMTPServerDataProvider.cs" />
     <Compile Include="Data\Linq2SQL\MailSenderDB.cs">
       <DependentUpon>MailSenderDB.dbml</DependentUpon>
     </Compile>
