--- a/WPFSendMail/MailSender.Lib/App.config
+++ b/WPFSendMail/MailSender.Lib/App.config
@@ -1,15 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework"
+        type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+        requirePermission="false"/>
     </configSections>
     <connectionStrings>
         <add name="MailSender.Lib.Properties.Settings.MailSenderDBConnectionString"
             connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MailSenderDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
-            providerName="System.Data.SqlClient" />
+            providerName="System.Data.SqlClient"/>
     </connectionStrings>
-    <appSettings>
-      <add key="smtpName" value="smtp.yandex.ru"/>
-      <add key="port" value="25"/>
-    </appSettings>
+    <entityFramework>
+        <providers>
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+        </providers>
+    </entityFramework>
 
 </configuration>
